immich/immich-ingress-local-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-traefik
  namespace: immich
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
    traefik.ingress.kubernetes.io/response-compression: "false"
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - immich-traefik.hejlepi.local
    secretName: hejlepi-local-tls
  rules:
    - host: immich-traefik.hejlepi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
