immich/immich-ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-local
  namespace: immich
spec:
  ingressClassName: nginx-lan
  tls:
  - hosts:
    - immich.hejlepi.local
    secretName: hejlepi-local-tls
  rules:
    - host: immich.hejlepi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
